--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,11 @@ dependencies:
   image_picker: ^0.8.4+2
   provider: ^6.1.2
   shared_preferences: ^2.2.3
-  uuid: ^4.4.0
+  # uuid: ^4.4.0
+  intl: ^0.17.0
 
 dev_dependencies:
+  
   flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
