--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   image_picker: ^0.8.4+2
   provider: ^6.1.2
   shared_preferences: ^2.2.3
-  # uuid: ^4.4.0
+  charts_flutter: ^0.11.0
+  uuid: ^4.4.0
   intl: ^0.17.0
 
 dev_dependencies:
@@ -50,6 +51,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
+ 
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -77,15 +79,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Assets\images\logo.png
-    - Assets\images\accessories.png
-    - Assets\images\smartwatch.png
-    - Assets\images\headset.png
-    - Assets\images\mobiles.png
-    - Assets\images\tablet.png
-    - Assets\images\dP.jpeg
-    - Assets\images\cover.png
-    - Assets\images\plus.png
+  - Assets\images\logo.png
+    
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
