--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   charts_flutter: ^0.11.0
   uuid: ^4.4.0
   intl: ^0.17.0
+  fl_chart: ^0.68.0
+  
   # flutter_datetime_picker: ^1.5.1
   
 dev_dependencies:
