--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   charts_flutter: ^0.11.0
   uuid: ^4.4.0
   intl: ^0.17.0
-  fl_chart: ^0.68.0
+  webview_flutter: ^4.8.0
+  # fl_chart: ^0.68.0
   
   # flutter_datetime_picker: ^1.5.1
   
@@ -84,6 +85,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - Assets\images\logo.png
+  - Assets\images\accessories.png
+  - Assets\images\smartwatch.png
+  - Assets\images\mobile.png
+  - Assets\images\tablet.png
     
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
